fix: alignment container Adm page

--- a/consultoria/src/components/AdminProfile/AdminProfile.module.css
+++ b/consultoria/src/components/AdminProfile/AdminProfile.module.css
@@ -6,16 +6,12 @@
 .userDataInfo {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   flex: 1;
-  padding: 2rem;
-  align-items: center;
-  border-radius: 0px 14px 14px 0px;
   opacity: 0.7;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  align-items: center;
-  justify-content: center;
 }
 .userDataInfoItem {
   display: flex;
