--- a/consultoria/src/components/Forms/AdminForm/AdminForm.module.css
+++ b/consultoria/src/components/Forms/AdminForm/AdminForm.module.css
@@ -1,16 +1,9 @@
 .userData {
   display: flex;
   flex-direction: column;
-  min-width: 502px;
-  padding: 2rem;
-  align-items: center;
-  background: url("@/assets/bgAdd.png");
-  background-repeat: no-repeat;
-  border-radius: 0px 14px 14px 0px;
-  opacity: 0.7;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 .userData h2 {
@@ -19,8 +12,6 @@
   font-family: Inter;
   font-size: 25px;
   font-weight: 600;
-  line-height: 71.023%;
-  letter-spacing: -0.45px;
 }
 
 .userData img {
