--- a/consultoria/src/components/Forms/AdminPasswordForm/AdminPasswordForm.module.css
+++ b/consultoria/src/components/Forms/AdminPasswordForm/AdminPasswordForm.module.css
@@ -1,16 +1,9 @@
 .userData {
   display: flex;
   flex-direction: column;
-  min-width: 502px;
-  padding: 2rem;
-  align-items: center;
-  background: url("@/assets/bgAdd.png");
-  background-repeat: no-repeat;
-  border-radius: 0px 14px 14px 0px;
-  opacity: 0.7;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 .userData h2 {
@@ -36,7 +29,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  padding-bottom: 1rem;
+  /* padding-bottom: 1rem; */
   width: 100%;
 }
 
@@ -92,7 +85,7 @@
 }
 
 .feedback {
-  width: 500px;
+  width: 100%;
   text-align: center;
   text-wrap: wrap;
 }
